@@ -1,3 +1,7 @@
+1997-10-02  Daniel.Weaver
+
+	* menu.c: ncurses-4.1-971011
+
 1997-09-29  Daniel.Weaver
 
 	* color.c, ansi.c: ncurses-4.1-971011
